--- a/05.smart_brain_app/01.smart_brain_api/package.json
+++ b/05.smart_brain_app/01.smart_brain_api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcrypt-node": "^0.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
